refactor: change the response format to display total number of elements available alongside the page content in getAll() and search() methods